2011-03-07  Paul Lesniewski <paul@squirrelmail.org>
	* Added information about how to use squirrelmail-imap_proxy
	  with servers that are only available via imaps

2011-01-16  Paul Lesniewski <paul@squirrelmail.org>
	* Added the ability to authenticate to the IMAP server
          using SASL plain authentication with fixed authentication
          credentials (thanks to Jeffrey Arbuckle and Martin Smith)

2010-10-29  Paul Lesniewski <paul@squirrelmail.org>
	* Fixed compilation warnings when openssl is not available.

2010-10-28  Paul Lesniewski <paul@squirrelmail.org>
	* Increased default buffer sizes.

	* Fixed possible buffer overflow issue and a few other small
          issues, complements Jose Celestino.  Thanks also to Tomas
          Lindroos.

	* Fixed LOGIN command so that it handles literal arguments
          correctly.

2010-08-19  Paul Lesniewski <paul@squirrelmail.org>
	* Added several warnings that try to catch the case where someone
          tries to set the server_port to 993, which is usually a mistaken
          use of TLS/SSL (port 993 is usually for imaps, which is not
          supported; IMAP Proxy supports STARTTLS from a "normal" port,
          which is usually 143)

2010-07-26  Paul Lesniewski <paul@squirrelmail.org>
	* Updated copyrights and other administrative actions related to
          the adoption of this software by the SquirrelMail Project

2010-02-20  Dave McMurtrie  <davemcmurtrie@gmail.com>
	* common.h: Updated version to 1.2.7

2009-10-16  Dave McMurtrie  <davemcmurtrie@gmail.com>
	* main.c: Applied patch by Jose Luis Tallon to fix compiler warnings.
          Applied patch by Jose Luis Tallon to provide for default config
	  options.  Applied patch by Jose Luis Tallon to improve server
	  connect retry logic.

	* request.c: Applied patch by Jose Luis Tallon to fix compiler
          warnings.

	* select.c: Applied patch by Jose Luis Tallon to fix broken syslog
          call.
